--- a/DblEssentialsExercises/Common.props
+++ b/DblEssentialsExercises/Common.props
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="Current" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <CommonEnvVars>EXEDIR=$(SolutionDir)$(Configuration)\$(Platform)</CommonEnvVars>
+    <CommonEnvVars>EXEDIR=$(SolutionDir)$(Configuration)\$(Platform);INC=$(SolutionDir)inc</CommonEnvVars>
   </PropertyGroup>
 </Project>
